--- a/WebContent/assets/css/creations/aniview.css
+++ b/WebContent/assets/css/creations/aniview.css
@@ -5,6 +5,11 @@
     font-style: normal;
 }
 
+/* *{
+	padding: 0;
+	margin : 0;
+} */
+
 body {
 	font-family: 'GmarketSansMedium';
 }
@@ -90,8 +95,7 @@ main {
 
 .creations-main-content {
   /* padding: 0 50px; */
-
-  text-align: center;
+ 	text-align: center;
 }
 
 .creations-main-content > img {
